--- a/EntregaMC13/MiniChallenge#13.ipynb
+++ b/EntregaMC13/MiniChallenge#13.ipynb
@@ -1,9 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3 align='center'>Programacion</h3>\n",
+    "<h3 align='center'>Jorge Andres Duque Restrepo</h3>\n",
+    "<h3 align='center'>Mini challenge #13</h3>\n",
+    "<h3 align='center'>08/05/2023</h3>"
+   ]
   },
   {
    "cell_type": "code",
