--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -4,7 +4,21 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3 align=\"center\">Algoritmo flood fill</h1>\n",
+    "\n",
+    "\n",
+    "<h3 align=\"center\">Jorge Andres Duque Restrepo</h3>\n",
+    "<h3 align=\"center\">Ingenieria Mecatronica</h3>\n",
+    "\n",
+    "\n",
+    "<h3 align=\"center\">Programacion</h3>\n",
+    "<h3 align=\"center\">Andrés Quintero Zea</h3>\n",
+    "\n",
+    "\n",
+    "<h3 align=\"center\">Universidad Escuela De Ingenieria De Antioquia</h3>\n",
+    "<h3 align=\"center\">24/05/2023</h3>"
+   ]
   },
   {
    "attachments": {},
@@ -26,34 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0\n",
-      "columna izquierda\n",
-      "9.0\n",
-      "columna izquierda\n",
-      "8.0\n",
-      "columna izquierda\n",
-      "7.0\n",
-      "columna izquierda\n",
-      "6.0\n",
-      "5.0\n",
-      "fila superior\n",
-      "4.0\n",
-      "fila superior\n",
-      "3.0\n",
-      "2.0\n",
-      "1.0\n",
-      "fin\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "flood_fill = np.zeros((5,5,5))\n",
     "aux_u=0\n",
@@ -216,8 +205,49 @@
     "Cuando tuve listo el algoritmo, el siguente paso fue, ocn la ayuda de ChatGPT, armas la matriz morfologica para el hardware de mi robot, teniendo en cuenta costos y dimensiones.\n",
     "\n",
     "<img src=\"img/sensor.jpg\"\n",
-    "     width=\"600\"\n",
-    "     height=\"300\">"
+    "     width=\"400\"\n",
+    "     height=\"300\">\n",
+    "<img src=\"img/sensor_color.jpg\"\n",
+    "     width=\"400\"\n",
+    "     height=\"400\">\n",
+    "<img src=\"img/brujula_digital.jpg\"\n",
+    "     width=\"400\"\n",
+    "     height=\"400\">\n",
+    "<img src=\"img/motorreductor.jpg\"\n",
+    "     width=\"400\"\n",
+    "     height=\"400\">"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despues de revisar las sugerencias de chatGPT procedi a hacer una matriz morfologica para saber mas o menos los costes de mi proyecto y poder comprarlos para empezar a materializar mi proyecto."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cuando porfin consegui los materiales procedi a soldar todo ya que los sensores venian sin los pines para poder conectarlos al microcontrolador, incluso el microcontrolador en si venia si los pines para poder hacer las conecciones a los sensores"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con la ayuda de ChatGPT y la documentacion de los sensores jusnto a la documentacion de micropython y la raspberry pi pico hay que programar los sensores para poder que nuestro robot funcione y que justo al algore"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despues de mucho tiempo de meditacion e intento y error me vi de cara a un problema, el tiempo. Debido que nunca habia trabajado en mi vida con un microcontrolador tuve que aprender desde cero, aprendi a instalar un frimware; aprendi a como manejar sensores con una raspberry pi pico; aprendi a como interactuar con el microcontrolador desde un editor de texto; pero no fue suficiente. Asi que opté por presentar solo el algoritmo flood fill que realice para que mi robor pudiese tomar desiciones por si solo sin necesidad de la intervencion del usuario."
    ]
   }
  ],
