finalizo el proyecto

--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "7.0\n",
+      "6.0\n",
+      "5.0\n",
+      "4.0\n",
+      "3.0\n",
+      "2.0\n",
+      "1.0\n",
+      "fin\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "flood_fill = np.zeros((5,5,5))\n",
     "aux_u=0\n",
@@ -91,7 +108,7 @@
     "\n",
     "    #fila superior\n",
     "    elif (ubicacion[0]-1 == -1 ^ (ubicacion[1]-1 == -1 or ubicacion[1]+1 == 5)) and flood_fill[2][ubicacion[0]][ubicacion[1]] == 1:\n",
-    "        print(\"fila superior\")\n",
+    "       \n",
     "        #Avanza hacia el este\n",
     "        if ubicacion[0]-1 == -1 and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
     "            ubicacion[1]+=1\n",
@@ -106,7 +123,7 @@
     "\n",
     "    #Fila inferior \n",
     "    elif (ubicacion[0]+1 == 5 ^ (ubicacion[1]-1 == -1 or ubicacion[1]+1 == 5)) and flood_fill[4][ubicacion[0]][ubicacion[1]] == 1:\n",
-    "        print(\"fila inferior\")\n",
+    "        \n",
     "        #Avanza hacia el este\n",
     "        if ubicacion[0]+1 == 5 and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
     "            ubicacion[1]+=1\n",
@@ -121,7 +138,7 @@
     "\n",
     "    #Columna izquierda\n",
     "    elif ubicacion[1]-1 == -1:\n",
-    "        print(\"columna izquierda\")\n",
+    "        \n",
     "        #fuera de las esquinas\n",
     "        if ubicacion[0]-1 >= 0 and ubicacion[0]+1 <= 4:\n",
     "            #Avanza hacia el este\n",
@@ -158,7 +175,7 @@
     "\n",
     "    #Columna derecha \n",
     "    elif ubicacion[1]+1 == 5:\n",
-    "        print(\"columna derecha \")\n",
+    "        \n",
     "        #fuera de esquinas\n",
     "        if ubicacion[0]-1 >= 0 and ubicacion[0]+1 <= 4:\n",
     "            #Avanza hacia el norte\n",
@@ -253,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -267,12 +284,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58837b1b657ea91009af8409fc244ae3b5ccf93ea980d6fb6b80adc5f697f4cc"
+    "hash": "c28da407b5413b3940d87ecdae5ea8ce0c2929d84f560e9f5daaaa2573d53e68"
    }
   }
  },
